# pkg/generated/server/restapi/operations/healthz/get_healthz_parameters.go
@@ -1,0 +1,45 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package healthz
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/runtime/middleware"
+)
+
+// NewGetHealthzParams creates a new GetHealthzParams object
+// no default values defined in spec.
+func NewGetHealthzParams() GetHealthzParams {
+
+	return GetHealthzParams{}
+}
+
+// GetHealthzParams contains all the bound params for the get healthz operation
+// typically these are obtained from a http.Request
+//
+// swagger:parameters getHealthz
+type GetHealthzParams struct {
+
+	// HTTP Request Object
+	HTTPRequest *http.Request `json:"-"`
+}
+
+// BindRequest both binds and validates a request, it assumes that complex things implement a Validatable(strfmt.Registry) error interface
+// for simple values it will use straight method calls.
+//
+// To ensure default values, the struct must have been initialized with NewGetHealthzParams() beforehand.
+func (o *GetHealthzParams) BindRequest(r *http.Request, route *middleware.MatchedRoute) error {
+	var res []error
+
+	o.HTTPRequest = r
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
